--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # 表达式生成 https://crontab.guru/
-    - cron: '30 */1 * * *'
+    - cron: '0 * * * *'
   push:
     paths:
       - 'sources.list'
