--- a/.github/workflows/send-base64-email.yml
+++ b/.github/workflows/send-base64-email.yml
@@ -5,6 +5,7 @@ on:
     # UTC 时间：每天 0 点和 8 点 → 北京时间 8 点和 16 点
     - cron: '0 7 * * *'
     - cron: '0 16 * * *'
+    workflow_dispatch:      # 添加这个就能手动运行
 
 jobs:
   send-mail:
@@ -36,4 +37,5 @@ jobs:
           ${{ steps.read_base64.outputs.content }}
         to: your@email.com
         from: GitHub Actions <your@email.com>
+
 
