--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -5,6 +5,7 @@ on:
   schedule:
     # 表达式生成 https://crontab.guru/
     - cron: '0 * * * *'
+    workflow_dispatch:      # 添加这个就能手动运行
   push:
     paths:
       - 'sources.list'
