--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -3,8 +3,9 @@ name: Fetch
 on:
   workflow_dispatch:
   schedule:
+    # 表达式生成 https://crontab.guru/
     - cron: '0 * * * *'
-    push:
+  push:
     paths:
       - 'sources.list'
       - 'config.yml'
