--- a/.github/workflows/send-email-base.yml
+++ b/.github/workflows/send-email-base.yml
@@ -1,60 +1,57 @@
-name: Send Email
+name: Send Base64 Email
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 支持手动触发
   schedule:
-    - cron: '0 2 * * *'  # 每天北京时间10:00执行
+    - cron: '0 0 * * *'   # UTC 0点 → 北京时间 08:00
+    - cron: '0 8 * * *'   # UTC 8点 → 北京时间 16:00
 
 jobs:
   send:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install --upgrade pip
+    - name: Send email with list.txt content
+      env:
+        SMTP_SERVER: smtp.qq.com
+        SMTP_PORT: 587
+        SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+        AUTH_CODE: ${{ secrets.AUTH_CODE }}
+        RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
+      run: |
+        python - <<EOF
+        import smtplib
+        from email.mime.text import MIMEText
+        from email.header import Header
+        from email.utils import formataddr
 
-    - name: Send email
-  env:
-    SMTP_SERVER: smtp.qq.com
-    SMTP_PORT: 587
-    SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
-    AUTH_CODE: ${{ secrets.AUTH_CODE }}
-    RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
-  run: |
-    python - <<EOF
-    import smtplib
-    from email.mime.text import MIMEText
-    from email.header import Header
-    from email.utils import formataddr
+        try:
+            with open('list.txt', 'r', encoding='utf-8') as f:
+                content = f.read()
 
-    # 读取 list.txt 内容
-    with open('list.txt', 'r', encoding='utf-8') as f:
-        content = f.read()
+            msg = MIMEText(f'以下是 list.txt 的 Base64 内容：\n\n{content}', 'plain', 'utf-8')
+            msg['From'] = formataddr((str(Header('GitHub Actions', 'utf-8')), '${{ env.SENDER_EMAIL }}'))
+            msg['To'] = '${{ env.RECEIVER_EMAIL }}'
+            msg['Subject'] = Header('每日节点更新', 'utf-8')
 
-    msg = MIMEText(f'以下是 list.txt 的 Base64 内容：\n\n{content}', 'plain', 'utf-8')
-    msg['From'] = formataddr((str(Header('GitHub Actions', 'utf-8')), '${{ env.SENDER_EMAIL }}'))
-    msg['To'] = '${{ env.RECEIVER_EMAIL }}'
-    msg['Subject'] = Header('每日节点更新', 'utf-8')
-
-    try:
-        server = smtplib.SMTP('${{ env.SMTP_SERVER }}', ${{ env.SMTP_PORT }})
-        server.ehlo()
-        server.starttls()
-        server.login('${{ env.SENDER_EMAIL }}', '${{ env.AUTH_CODE }}')
-        server.sendmail('${{ env.SENDER_EMAIL }}', ['${{ env.RECEIVER_EMAIL }}'], msg.as_string())
-        server.quit()
-        print('✅ 邮件发送成功')
-    except Exception as e:
-        import traceback
-        print('❌ 邮件发送失败:', e)
-        traceback.print_exc()
-        exit(1)
-    EOF
+            server = smtplib.SMTP('${{ env.SMTP_SERVER }}', ${{ env.SMTP_PORT }})
+            server.ehlo()
+            server.starttls()
+            server.login('${{ env.SENDER_EMAIL }}', '${{ env.AUTH_CODE }}')
+            server.sendmail('${{ env.SENDER_EMAIL }}', ['${{ env.RECEIVER_EMAIL }}'], msg.as_string())
+            server.quit()
+            print('✅ 邮件发送成功')
+        except Exception as e:
+            import traceback
+            print('❌ 邮件发送失败:', e)
+            traceback.print_exc()
+            exit(1)
+        EOF
